--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
         <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </head>
@@ -14,6 +14,6 @@
             </div>
             <div class="tasks"></div> 
         </div>
-        <script src="/script.js"></script> 
+        <script src="script.js"></script> 
     </body>
 </html>
